--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Solidus integration with Nexio",
   "main": "dist/bundle.js",
   "scripts": {
-    "develop": "webpack --mode development --watch --progress",
+    "start": "webpack --mode development --watch --progress",
     "gem-build": "webpack --mode production",
     "prepublishOnly": "NPM_PACKAGE=true webpack --mode production"
   },
