--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "webpack-cli": "^4.7.2"
   },
   "dependencies": {
-    "jsencrypt": "^3.2.0"
+    "jsencrypt": "3.2.0",
+    "raw-loader": "4.0.2",
+    "tingle.js": "0.16.0"
   }
 }
